<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App names -->
    <string name="app_name">Vehicle Routing Problem</string>
    <string name="app_name_short">VRP</string>

    <!-- Menu items -->
    <string name="action_run">Run</string>
    <string name="action_about">About this application</string>
    <string name="action_legend">Legend</string>

    <!-- Directories -->
    <string name="vrps_dir">vrps</string>

    <!-- Dialog messages -->
    <string name="solver_running_message">Solver is running. Do you want to stop the solver?</string>

    <!-- Toast messages -->
    <string name="calculation_started">Calculation started.</string>
    <string name="calculation_finished">Calculation finished.</string>

    <!-- Buttons -->
    <string name="button_open_file">Open file</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    
    <!-- Legend -->
    <string name="legend_vehicle">Vehicle</string>
    <string name="legend_depot">Depot</string>
    <string name="legend_customer">Customer with demand</string>
    <string name="legend_road">Road to customer</string>
    <string name="legend_depot_road">Road to depot</string>
    <string name="legend_demand">10</string>

    <!-- Longer texts -->
    <string name="select_time_text">1. Select time limit in seconds</string>
    <string name="select_algorithm_text">2. Select algorithm</string>
    <string name="select_file_text">3. Continue to select file</string>
    <string name="welcome_text">
        <![CDATA[
        <h2>Welcome to the Vehicle Routing Problem application!</h2>
        <p>Please select time limit in seconds, algorithm for calculation and click on the Open file button.
        After that, you can select example of vrp problem to solve.</p>
        ]]>
    </string>
    <string name="about_app"><b>Author:</b> Tomas David\n\n<b>Year:</b> 2015\n\nThe application demonstrates
        OptaPlanner functionality on the Android platform. Demonstration is exemplified by Vehicle
        routing problem example.
    </string>

    <!-- Algorithms -->
    <string name="first_fit_decreasing">FFD with LA</string>
    <string name="branch_and_bound">Branch and bound</string>
    <string name="brute_force">Brute force</string>

    <!-- Algorithm files-->
    <string name="first_fit_decreasing_file_name">vrpFirstFitDecreasingSolverConfig.xml</string>
    <string name="branch_and_bound_file_name">vrpBranchAndBoundSolverConfig.xml</string>
    <string name="brute_force_file_name">vrpBruteForceSolverConfig.xml</string>

</resources>
