<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_run"
        android:title="@string/action_run"
        android:orderInCategory="1"
        android:icon="@drawable/ic_play_arrow_white_24dp"
        app:showAsAction="always"/>

    <item android:id="@+id/action_legend"
        android:title="@string/action_legend"
        android:orderInCategory="2"
        android:icon="@drawable/ic_help_white_24dp"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="3"
        android:icon="@drawable/ic_info_white_24dp"
        app:showAsAction="ifRoom"/>

</menu>
