<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:layout_weight="1" >

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_margin="@dimen/margin">

            <ImageView
                android:src="@drawable/vehicle_blue"
                android:layout_margin="@dimen/margin"
                android:layout_gravity="center"/>

            <TextView
                android:text="@string/legend_vehicle"
                android:layout_margin="10dp"
                android:textSize="@dimen/text_size"
                android:layout_gravity="left|center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>

        <TableRow
            android:layout_margin="@dimen/margin">

            <ImageView
                android:src="@drawable/depot"
                android:layout_margin="@dimen/margin"
                android:layout_gravity="center"/>

            <TextView
                android:text="@string/legend_depot"
                android:layout_margin="@dimen/margin"
                android:textSize="@dimen/text_size"
                android:layout_gravity="left|center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>

        <TableRow
            android:layout_margin="@dimen/margin" >

            <TextView
                android:text="@string/legend_demand"
                android:textSize="16dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:background="@drawable/shape_customer"/>

            <TextView
                android:text="@string/legend_customer"
                android:layout_margin="@dimen/margin"
                android:textSize="@dimen/text_size"
                android:layout_gravity="left|center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:layout_margin="10dp" >

            <View
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:background="@drawable/shape_line"
                android:layerType="software"/>

            <TextView
                android:text="@string/legend_road"
                android:layout_margin="@dimen/margin"
                android:textSize="@dimen/text_size"
                android:layout_gravity="left|center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>

        <TableRow
            android:layout_margin="@dimen/margin" >

            <View
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:background="@drawable/shape_dash_line"
                android:layerType="software"/>

            <TextView
                android:text="@string/legend_depot_road"
                android:layout_margin="@dimen/margin"
                android:textSize="@dimen/text_size"
                android:layout_gravity="left|center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </TableRow>

    </TableLayout>
</ScrollView>
