<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/fragment_main"
    android:padding="@dimen/padding">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/margin">

            <TextView
                android:id="@+id/select_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_time_text"
                android:textSize="@dimen/text_size"/>

            <NumberPicker
                android:id="@+id/timeLimitPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_algorithm_text"
                    android:textSize="@dimen/text_size"
                    android:layout_marginBottom="@dimen/margin"/>

                <Spinner
                    android:id="@+id/algorithm_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_file_text"
                    android:layout_marginBottom="@dimen/margin"
                    android:textSize="@dimen/text_size"/>

                <org.tomasdavid.vehicleroutingproblem.OpenFileButton
                    android:id="@+id/button_open_file"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:text="@string/button_open_file"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
